[gd_scene load_steps=4 format=3 uid="uid://commspanel_main"]

[ext_resource type="Script" path="res://scripts/CommsPanel.gd" id="1_comms"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.05, 0.08, 0.12, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.5, 0.3, 0.8)
corner_radius_left_top = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="LabelSettings" id="LabelSettings_name"]
font_size = 16
font_color = Color(0.8, 1.0, 0.8, 1)
outline_size = 1
outline_color = Color(0, 0.1, 0.05, 1)

[sub_resource type="LabelSettings" id="LabelSettings_text"]
font_size = 14
font_color = Color(0.85, 0.85, 0.8, 1)
outline_size = 1
outline_color = Color(0.05, 0.05, 0.05, 1)

[node name="CommsPanel" type="CanvasLayer"]
layer = 11
script = ExtResource("1_comms")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -100.0
offset_right = 240.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Portrait" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="NameLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "CALLSIGN"
label_settings = SubResource("LabelSettings_name")

[node name="TextLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Dialogue text goes here..."
label_settings = SubResource("LabelSettings_text")
autowrap_mode = 2
